Z-index bug part 2

--- a/src/styles/_Navbar.scss
+++ b/src/styles/_Navbar.scss
@@ -1,7 +1,6 @@
 .navbar-container {
   z-index: 5;
   position: sticky;
-  z-index: 1;
   color: #fff;
   display: grid;
   @media screen and (min-width: 1000px) {
